Change version of of api from extnesion/v1beta1 to apps/v1 in manifests files

--- a/manifests/v1alpha3/db/deployment.yaml
+++ b/manifests/v1alpha3/db/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: katib-db
@@ -8,6 +8,10 @@ metadata:
     component: db
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        app: katib
+        component: db
   template:
     metadata:
       name: katib-db
